<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/item1"
            android:icon="@drawable/ic_outline_video_library"
            android:title="@string/all_vid"
            android:checkable="true"/>
    <item
            android:id="@+id/item2"
            android:icon="@drawable/ic_baseline_clock"
            android:title="@string/rctly_viewed"
            android:checkable="true"/>
    <item
            android:id="@+id/item3"
            android:icon="@drawable/ic_baseline_favorite"
            android:title="@string/my_fav"
            android:checkable="true"
    />


    <item
        android:title="自訂分類"
        android:id = "@+id/menuitem_subtitle"
        >
        <menu>

        </menu>
    </item>

</menu>