<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".act.ResetSuccessActivity">


    <TextView
            android:text="@string/reset_success"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/tv_reset_suc"
            android:gravity="center" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:fontFamily="@font/taipei_sans_regular"
            android:textSize="36sp" android:textStyle="bold" android:textColor="@color/black"
            app:layout_constraintHeight_percent="0.2" app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="@string/hint_reset_mail"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/tv_hint_reset"
            android:textSize="16sp"
            android:textColor="@color/black" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/taipei_sans_regular" app:layout_constraintHeight_percent="0.2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.13999999"
            android:gravity="center"/>


    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/ic_baseline_email" android:id="@+id/image_reset_suc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_create_go_back" app:layout_constraintHeight_percent="0.3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.57"
            android:contentDescription="@string/email_logo"/>

    <TextView
            android:text="@string/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_create_go_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/hint_forgot_pw"
            android:fontFamily="@font/taipei_sans_regular"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>