<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PlayerDataActivity" android:background="@color/fragment_bg">


    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/bar_bottom"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/subtab_top"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/subtab_bot"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/subtab_left"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/subtab_right"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.95"/>
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/bar_layout_player_data" app:layout_constraintBottom_toBottomOf="@id/bar_bottom"
            app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/bar_player_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:menu="@menu/search_top_bar"
                app:navigationIcon="@drawable/ic_baseline_close"
                style="@style/top_app_bar_yellow"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tab_player_data"
            app:tabTextAppearance="@style/TabText"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintTop_toBottomOf="@id/bar_layout_player_data"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:tabTextColor="@color/black" app:tabIndicatorColor="@color/elegant_blue"
            app:tabSelectedTextColor="@color/elegant_blue">
        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tabItem" android:text="@string/blue_player"/>
        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tabItem2" android:text="@string/red_player"/>
    </com.google.android.material.tabs.TabLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/subtab_bot"
            app:layout_constraintTop_toTopOf="@id/subtab_top" app:layout_constraintLeft_toLeftOf="@id/subtab_left"
            app:layout_constraintRight_toRightOf="@id/subtab_right">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_player_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="20dp" android:elevation="1dp"
                app:cardBackgroundColor="@color/white" app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.tabs.TabLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tab_player_data_sub"
                        app:tabTextAppearance="@style/TabText_17"
                        app:tabSelectedTextColor="@color/ground"
                        app:tabIndicatorColor="@color/ground"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.0" tools:ignore="SpeakableTextPresentCheck">
                    <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tabItem_sub1"
                            android:text="@string/ball_win_rate"/>
                    <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tabItem_sub2"
                            android:text="@string/strategy"/>
                    <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tabItem_sub3"
                            android:text="@string/move_direction"/>
                </com.google.android.material.tabs.TabLayout>
                <androidx.fragment.app.FragmentContainerView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/frag_view_player_data"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tab_player_data_sub"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:name="com.zzrong.badminton_analyzer.fragment.WinRateFragment"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>